<resources>
    <string name="app_name">PopularMovies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="unknown">Unknown</string>
    <string name="movie_poster_description">Poster image for a movie.</string>
    <string name="network_error_image">Network Error Image. Tap to Retry.</string>
    <string name="release_date">Release Date:</string>
    <string name="synopsis">Synopsis</string>
    <string name="user_rating">User Rating:</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews:</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="check_connection">Please check your connection and try again</string>
    <string name="try_saving_to_db_again">Please try again when all data is loaded</string>
    <string name="share">Share</string>
    <string name="no_videos_found">Sorry, no videos found!</string>
</resources>