<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.popularmovies.ui.DetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movieBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/movie_poster_description"
                android:scaleType="center"
                app:errorDrawable="@{@drawable/error_background}"
                app:imageUrl="@{viewModel.movieItem.movieDetailImageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/moviePoster"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster_description"
                android:scaleType="fitXY"
                android:translationX="30dp"
                android:translationY="-125dp"
                app:errorDrawable="@{@drawable/error_poster}"
                app:imageUrl="@{viewModel.movieItem.getMoviePosterFullUrl}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieBackground" />

            <TextView
                android:id="@+id/user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rating"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="30dp"
                android:translationY="-125dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@{viewModel.movieItem.movieUserRating}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="10dp"
                android:translationY="-125dp"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/release_date"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="30dp"
                app:layout_constraintStart_toEndOf="@+id/moviePoster"
                app:layout_constraintTop_toBottomOf="@+id/movieBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.movieItem.getMovieReleaseDate()}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="30dp"
                app:layout_constraintStart_toEndOf="@+id/release_date"
                app:layout_constraintTop_toBottomOf="@+id/movieBackground" />

            <View
                android:id="@+id/summary_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:translationY="-125dp"
                app:layout_constraintTop_toBottomOf="@id/user_rating" />

            <TextView
                android:id="@+id/synopsis_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textSize="30sp"
                android:textStyle="bold"
                android:translationY="-125dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_separator" />

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{viewModel.movieItem.getSynopsis()}"
                android:translationY="-125dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsis_title" />

            <View
                android:id="@+id/trailers_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:translationY="-125dp"
                app:layout_constraintTop_toBottomOf="@id/synopsis" />

            <TextView
                android:id="@+id/trailers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/trailers"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:translationY="-125dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_separator"
                tools:text="Trailers" />

            <!-- TODO: Add view for if no trailers exist -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailers"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:requiresFadingEdge="vertical"
                android:scrollbars="vertical"
                android:translationY="-125dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/trailers_label"
                app:setAdapter="@{viewModel.getTrailerAdapter()}" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/network_error_image"
                android:onClick="@{() -> viewModel.retryLoadingExtras()}"
                android:scaleType="center"
                android:translationY="-125dp"
                app:layout_constraintTop_toBottomOf="@+id/trailers_label"
                app:srcCompat="@drawable/try_again_portrait"
                app:visibleOrGone="@{viewModel.errorView}"
                tools:visibility="visible" />

            <include
                layout="@layout/loading_indicator"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleOrGone="@{viewModel.loadingIndicator}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>